<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" xmlns:tools="http://schemas.android.com/tools">
    <plurals name="schedule_block_subtitle"
             description="Shown in the schedule to indicate how many sessions are available on that particular time slot.">
        <item quantity="one"><xliff:g id="number_of_sessions">%1$d</xliff:g> available session</item>
        <item quantity="other"><xliff:g id="number_of_sessions">%1$d</xliff:g> available sessions</item>
    </plurals>
    <plurals name="session_notification_text"
             description="Shows as a notification on the system bar to alert user that some of their sessions are about to begin.">
        <item quantity="one">and <xliff:g id="num_sessions">%2$d</xliff:g> other starting in <xliff:g id="remaining_time">%1$d</xliff:g> min.</item>
        <item quantity="other">and <xliff:g id="num_sessions">%2$d</xliff:g> others starting in <xliff:g id="remaining_time">%1$d</xliff:g> min.</item>
    </plurals>
    <plurals name="session_notification_ticker"
             description="Shown as a notification on the system bar to alert user that some of their sessions are about to begin.">
        <item quantity="one">%1$d session is about to start.</item>
        <item quantity="other">%1$d sessions are about to start.</item>
    </plurals>
    <plurals name="session_plurals"
             description="Indicates a certain number of sessions.">
        <item quantity="one">%1$d session</item>
        <item quantity="other">%1$d sessions</item>
    </plurals>
    <plurals name="session_notification_title">
        <item quantity="one"><xliff:g id="num_sessions">%2$d</xliff:g> session is starting in <xliff:g id="remaining_time">%1$d</xliff:g> min.</item>
        <item quantity="other"><xliff:g id="num_sessions">%2$d</xliff:g> sessions are starting in <xliff:g id="remaining_time">%1$d</xliff:g> min.</item>
    </plurals>
    <string name="about_main"><![CDATA[
        <b>Google I/O 2016</b><br>
        Version %s
    ]]></string>
    <string name="about_terms">Terms of Service</string>
    <string name="about_privacy_policy">Privacy Policy</string>
    <string name="about_eula">End User License Agreement</string>
    <string name="about_licenses">Open Source Licenses</string>
    <string name="accept">Accept</string>
    <string name="add_to_schedule">Add to schedule</string>
    <string name="add_to_schedule_desc">Button to add session to your schedule</string>
    <string name="all_themes">All Themes</string>
    <string name="all_topics">All Topics</string>
    <string name="all_types">All Types</string>
    <string name="app_name">Google I/O</string>
    <string name="attending_in_person">In Person</string>
    <string name="attending_remotely">Remotely</string>
    <string name="browse_sessions">BROWSE SESSIONS</string>
    <string name="calltoaction_wifi_configure"><![CDATA[
        <br><br>Tap \'Add Wi-Fi Network\' to proceed.
    ]]></string>
    <string name="calltoaction_wifi_settings"><![CDATA[
        <br><br>Tap \'Open Wi-Fi Settings\' to enable Wi-Fi.
    ]]></string>
    <string name="close_and_go_back">Close and go back</string>
    <string name="cancel">Cancel</string>
    <string name="day_title_today">Today</string>
    <string name="day_title_tomorrow">Tomorrow</string>
    <string name="day_title_yesterday">Yesterday</string>
    <string name="decline">Decline</string>
    <string name="description_about">About</string>
    <string name="description_configure_wifi">Configure Wi-Fi</string>
    <string name="description_map">Map</string>
    <string name="description_refresh">Refresh data</string>
    <string name="description_search">Search</string>
    <string name="description_setup_wifi_body"><![CDATA[
        Since you\'re attending in person, we can set up this device to access the conference
        Wi-Fi network (5Ghz only). By configuring your Wi-Fi now, you\'ll help prevent network
        congestion.
    ]]></string>
    <string name="description_share">Share</string>
    <string name="description_extended">Extended Session</string>
    <string name="speaker_social_page">Go to the %1$s page for %2$s</string>
    <string name="empty_session_detail">No session details found.</string>
    <string name="session_live_streamed">Live streamed</string>
    <string name="session_watch_live">Watch Live</string>
    <string name="session_watch">Watch</string>
    <string name="session_replay">Replay</string>
    <string name="empty_widget_text">No more upcoming sessions.\nSee you next year!</string>
    <string name="give_feedback">Yes</string>
    <string name="keynote_group_title">Keynotes</string>
    <string name="live_available">LIVE</string>
    <string name="live_now">LIVE NOW</string>
    <string name="login_failed_text">Could not sync your sessions due to an error.</string>
    <string name="login_failed_text_retry">Retry</string>
    <string name="map_permission_denied">App permission denied.</string>
    <string name="more_items_button">More</string>
    <string name="my_schedule_badgepickup">Badge Pick-Up</string>
    <string name="my_schedule_badgepickup_description">Registration Desk</string>
    <string name="feedback_rating_confirmation">Your rating: %1$d out of %2$d stars"</string>
    <string name="feedback_rating_value">%1$d star</string>
    <string name="schedule_item_reserved">Reserved</string>
    <string name="schedule_item_not_reserved">Not reserved</string>
    <string name="schedule_item_waitlisted">Waitlisted</string>
    <string name="my_schedule_rate_this_session">RATE THIS SESSION</string>
    <string name="my_schedule_reserve_seat">Reserve Seat</string>
    <string name="my_schedule_request_pending">Request Pending&#8230;</string>
    <string name="my_schedule_already_reserved">Seat Reserved</string>
    <string name="my_schedule_reserve_disabled">Reserving is disabled</string>
    <string name="my_schedule_reservation_disabled_auth_button_text">Must sign in to reserve
    </string>
    <string name="my_schedule_reservation_must_sign_in_and_register_message">
        You must be signed in and registered for the event in order to register.
    </string>
    <string name="my_schedule_reservation_why_disabled">
        Reservations Disabled
    </string>
    <string name="my_schedule_waitlisted">Waitlisted</string>
    <string name="my_schedule_join_waitlist">Join Waitlist</string>
    <string name="my_schedule_cancel_reservation_confirmation">Are you sure you want to cancel your
        reservation?</string>
    <string name="my_schedule_cancel_waitlist_confirmation">Are you sure you want to cancel your
        reservation?</string>
    <string name="my_schedule_reservation_window_closed">Reservation window closed</string>
    <string name="my_schedule_reservation_clash_title">Time Conflict</string>
    <string name="my_schedule_reservation_clash_message">You already have a reservation or waitlist
        request for this time. Only one reservation per time block is allowed; please cancel your
        previous request if you\'d like to proceed.</string>
    <string name="my_schedule_return_successful_message">Your seat reservation was
        cancelled.</string>
    <string name="my_schedule_return_successful_title">Reservation Cancellation</string>
    <string name="my_schedule_return_denied_cutoff_message">Reservations are not cancellable 60
        minutes before the start time.</string>
    <string name="my_schedule_reservation_window_closed_info">Events are not reservable 60 minutes
        before the start time. A portion of seats will be held and available first-come,
        first-served onsite.</string>
    <string name="my_schedule_reservation_request_failed_message">Server error: Request
        failed, please try again later.</string>
    <string name="my_schedule_request_failed_title">Request failed</string>
    <string name="my_schedule_reservation_cancel_confirm_title">Confirm Cancellation</string>
    <string name="my_schedule_reservation_cancel_confirm_message">Are you sure you want to
        cancel your session reservation?</string>
    <string name="my_schedule_waitlist_cancel_confirm_message">Are you sure you want to cancel
        your waitlist request?</string>
    <string name="my_schedule_waitlist_cancel_confirm_title">Cancel Waitlist Request</string>
    <string name="navdrawer_description_a11y">Navigation Menu</string>
    <string name="navdrawer_item_feed">Feed</string>
    <string name="navdrawer_item_map">Map</string>
    <string name="navdrawer_item_info">Info</string>
    <string name="navdrawer_item_my_io">My I/O</string>
    <string name="navdrawer_item_my_schedule">Schedule</string>
    <string name="new_videos_title">New for <xliff:g id="year">%1$d</xliff:g></string>
    <string name="no_matching_sessions">No matching sessions.</string>
    <string name="no_matching_videos">No matching videos.</string>
    <string name="no_thanks">No, thanks</string>
    <string name="ok">OK</string>
    <string name="permission_write">Modify Google I/O schedule data</string>
    <string name="pref_conf_message_cards_enabled_description"
            description="Description in the Settings screen for the setting that enables display of
            cards with conference information in the explore screen.">Display cards with conference information on the Explore screen. These are time based and may include promotional messages from partners.</string>
    <string name="pref_conf_message_cards_enabled_title">Show conference messages</string>
    <string name="pref_analytics_enabled_title">Send anonymous usage statistics</string>
    <string name="pref_analytics_enabled_description">Send anonymous statistics about app usage
    to Google.</string>
    <string name="pref_local_times_description">Use your local time instead of the conference’s local time.</string>
    <string name="pref_local_times_title">Show local times</string>
    <string name="pref_notify_feedback_description">Display notifications asking for your feedback about your selected sessions.</string>
    <string name="pref_notify_feedback_title">Notify me to send feedback</string>
    <string name="pref_notify_starred_sessions_description">Display a notification when your selected sessions are about to begin.</string>
    <string name="pref_notify_starred_sessions_title">Notify me about my sessions</string>
    <string name="wifi_network_label">Wifi network</string>
    <string name="wifi_password_label">Password</string>
    <string name="setup_wifi">Save wifi network</string>
    <string name="view_sandbox_map_url" translatable="false">sandboxmapurl</string>
    <string name="view_officehours_map_url" translatable="false">officehoursmapurl</string>
    <string name="view_afterhours_map_url" translatable="false">afterhoursmapurl</string>
    <string name="event_sandbox_title">Sandbox</string>
    <string name="event_codelabs_title">Codelabs</string>
    <string name="event_officehours_title">Office Hours &amp; App Reviews</string>
    <string name="event_afterhours_title">After Hours</string>
    <string name="faq_stay_informed_title" translatable="false">Stay Informed</string>
    <string name="faq_content_formats_title" translatable="false">Content Formats</string>
    <string name="faq_livestream_and_recordings_title" translatable="false">
        Livestream &amp; Recordings</string>
    <string name="faq_attendance_pro_tips_title" translatable="false">Attendance Pro Tips</string>
    <string name="faq_additional_info_title" translatable="false">Additional Info</string>
    <string name="settings_time_zone_label">Show events in Pacific Time (PT)</string>
    <string name="settings_enable_notifications">Enable notifications</string>
    <string name="settings_enable_anon_statistics">Send anonymous usage statistics</string>
    <string name="about_app_version">Version %1$s</string>
</resources>