<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2017 Google Inc. All rights reserved.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<android.support.v4.widget.NestedScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            style="@style/Info.Cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/settings_content_padding"
                android:paddingTop="@dimen/settings_content_padding">

                <TextView
                    android:id="@+id/settingsTimeZoneLabel"
                    style="@style/Body1Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/settingsTimeZoneSwitch"
                    android:ellipsize="end"
                    android:padding="@dimen/padding_normal"
                    android:text="@string/settings_time_zone_label" />

                <Switch
                    android:id="@+id/settingsTimeZoneSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/settingsTimeZoneLabel"
                    android:padding="@dimen/padding_normal" />

                <TextView
                    android:id="@+id/settingsNotificationsLabel"
                    style="@style/Body1Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/settingsNotificationsSwitch"
                    android:layout_alignParentStart="true"
                    android:padding="@dimen/padding_normal"
                    android:text="@string/settings_enable_notifications" />

                <Switch
                    android:id="@+id/settingsNotificationsSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/settingsTimeZoneSwitch"
                    android:layout_toEndOf="@+id/settingsNotificationsLabel"
                    android:padding="@dimen/padding_normal" />

                <TextView
                    android:id="@+id/settingsAnonStatisticsLabel"
                    style="@style/Body1Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/settingsNotificationsLabel"
                    android:padding="@dimen/padding_normal"
                    android:text="@string/settings_enable_anon_statistics" />

                <Switch
                    android:id="@+id/settingsAnonStatisticsSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/settingsNotificationsSwitch"
                    android:layout_toEndOf="@+id/settingsAnonStatisticsLabel"
                    android:padding="@dimen/padding_normal" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/Info.Cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/settings_content_padding"
            android:paddingTop="@dimen/settings_content_padding">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/settings_content_padding"
                android:paddingTop="@dimen/settings_content_padding">

                <TextView
                    android:id="@+id/termsOfServiceLink"
                    style="?android:borderlessButtonStyle"
                    android:textColor="@color/lightish_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:linksClickable="true"
                    android:padding="@dimen/padding_normal"
                    android:text="@string/about_terms" />

                <TextView
                    android:id="@+id/privacyPolicyLink"
                    style="?android:borderlessButtonStyle"
                    android:textColor="@color/lightish_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_normal"
                    android:text="@string/about_privacy_policy" />

                <TextView
                    android:id="@+id/appVersion"
                    style="@style/Body1Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_normal"
                    android:text="@string/about_app_version"
                    tools:text="Version 1.4.278" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
